# es_pcs_26

Esercitazione1/: CMakeLists.txt  media_t.cpp  prog.cpp
Esercitazione2/: CMakeLists.txt  es02.cpp  es2_1.cpp
